--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <script src="jquery.js"></script>
     <script src="client.js"></script>
     <link rel="stylesheet" href="style.css">
+    <style>
+        table{
+            font-family: Arial, Helvetica, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+        }
+        td, th{
+            border: 1px solid black;
+            text-align: left;
+            padding: 8px;
+        }
+        tr:nth-child(odd){
+            background-color: #dddddd;
+        }
+    </style>
 
 </head>
 <body>
@@ -23,6 +38,63 @@
     <input type="number" placeholder="Annual Salary" id="js-annualSalary">
 
     <button id="js-submit">Submit</button>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h2>Employees</h2>
+    <table>
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>ID</th>
+            <th>Title</th>
+            <th>Annual Salary</th>
+            <th></th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>1</td>
+            <td>1</td>
+            <td>1</td>
+            <td>1</td>
+            <th><button id="js-row1">Delete</button></th>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>2</td>
+            <td>2</td>
+            <td>2</td>
+            <td>2</td>
+            <th><button id="js-row2">Delete</button></th>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>3</td>
+            <td>3</td>
+            <td>3</td>
+            <td>3</td>
+            <th><button id="js-row3">Delete</button></th>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>4</td>
+            <td>4</td>
+            <td>4</td>
+            <td>4</td>
+            <th><button id="js-row4">Delete</button></th>
+        </tr>
+    </table>
+
+
+
+
+
+
+
+
+
+
 
 
 
