fixed monthly expense

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Salary Calculator</h1>
     </header>
 
-    <H2>Add Employee</H2>
+    <H2>Add Employee:</H2>
 
     <input type="text" placeholder="First Name" id= "js-first">
     <input type="text" placeholder="Last Name" id="js-last">
